--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^9.0.7",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
